--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register">
+  <section class="form-register">
     <h4>Fomulario de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
 <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto">
 <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4"></textarea>
-  <input class="botton" id="enviar" type="submit" value="Registro">
+  <input class="botton" id="enviar" type="submit" value="Enviar">
     <p>Gracias por tus opiniones 😊</p>
-  </form>
+  </section>
 <script src="script.js"></script>
 </body>
 </html>
