name index change by formulario

--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="form-register">
+  <form class="form-register" >
     <h4>Fomulario de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
@@ -16,7 +16,7 @@
 <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4"></textarea>
   <input class="botton" id="enviar" type="submit" value="Enviar">
     <p>Gracias por tus opiniones 😊</p>
-  </section>
+  </form>
 <script src="script.js"></script>
 </body>
 </html>
