--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register" id="contacto">
+  <form class="form-register" id="contacto" action="correo.php" method="POST">
     <h4>Fomulario de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
@@ -17,6 +17,6 @@
   <input class="botton" id="enviar" type="submit" value="Enviar">
     <p>Gracias por tus opiniones 😊</p>
   </form>
-<script src="script.js"></script>
+<!-- <script src="script.js"></script> -->
 </body>
 </html>
