--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register" id="contacto" >
+  <form class="form-register" id="contacto" method="post">
     <h4>Fomulario de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
@@ -18,7 +18,6 @@
     <p>Gracias por tus opiniones 😊</p>
   </form>
   <script src="script.js"></script>
-  <script src="correo.js"></script>
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="https://formsubmit.co/js/v1.2/formsubmit.min.js"></script>
 </body>
 </html>
