--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto">
     <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4"></textarea>
     <input class="botton" id="enviar" type="submit" value="Enviar">
-    <p>Gracias por tus opiniones 😊</p>
+    <p>Gracias por tus opiniones 🐕🐈</p>
   </form>
   <script src="script.js"></script>
 </body>
