--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <form class="form-register" id="contacto"  action="https://formsubmit.co/brayanhernandez.proglunes@gmail.com" method="post">
-    <h4>Fomulario de contacto</h4>
+    <h4><bold>Fomulario</bold> de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
     <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto">
     <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4"></textarea>
     <input class="botton" id="enviar" type="submit" value="Enviar">
-    <p>Gracias por tus opiniones 🐕🐈</p>
+    <p>Gracias por tus opiniones <a href="">regresar</a><br>🐕🐈</p>
   </form>
   <script src="script.js"></script>
 </body>
