--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register" id="contacto"  action="https://formsubmit.co/brayanhernandez.proglunes@gmail.com" method="post">
+  <form class="form-register" id="contacto">
     <h4><bold>Fomulario</bold> de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
