--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register" id="contacto">
+  <form class="form-register" id="contacto" action="https://formsubmit.co/sitogave@mailgolem.com" method="POST>
     <h4><bold>Fomulario</bold> de contacto</h4>
-    <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre">
-    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo">
-    <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto">
-    <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4"></textarea>
+    <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre" required>
+    <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo" required>
+    <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto" required>
+    <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4" required></textarea>
     <input class="botton" id="enviar" type="submit" value="Enviar">
     <p>Gracias por tus opiniones <a href="">regresar</a><br>🐕🐈</p>
   </form>
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 </html>
