--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <form class="form-register" id="contacto" action="https://formsubmit.co/sitogave@mailgolem.com" method="post">
-    <h4><bold>Fomulario</bold> de contacto</h4>
+    <h4><bold>Formulario</bold> de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre" required>
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo" required>
     <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto" required>
