--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form class="form-register" id="contacto" action="https://formsubmit.co/sitogave@mailgolem.com" method="post">
+  <form class="form-register" id="contacto" action="https://formsubmit.co/boyeburi@mailgolem.com" method="post">
     <h4><bold>Formulario</bold> de contacto</h4>
     <input class="controls" type="text" name="nombre" id="nombre" placeholder="Ingrese su nombre" required>
     <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su correo" required>
     <input class="controls" type="text" name="asunto" id="asunto" placeholder="Asunto" required>
     <textarea class="controls" name="opinion" id="opinion" placeholder="Danos tu opinion" row="4" required></textarea>
     <input class="botton" id="enviar" type="submit" value="Enviar">
-    <p>Gracias por tus opiniones <a href="">regresar</a><br>🐕🐈</p>
+    <p>Gracias por tus opiniones <a href="">regresar</a></p>
   </form>
   <!-- <script src="script.js"></script> -->
 </body>
